# ibcmer

./: .gitignore  Makefile  README.md  a.out  debugger.c  debugger.h  dependencies.sh  doubleByte.cpp  doubleByte.h  executor.c  executor.h  ibcm-cheatsheet.txt  ibcm-op-codes.txt  ibcmer  ibcmer.c  ibcmer.cpp  install.sh  intNode.cpp  intNode.h  program.cpp  program.h  sortStack.cpp  sortStack.h  test.cpp  test.ibcm  text.h
R/: ibcmer.R
c/: .gitignore  Makefile  README.md  ibcmer.c
c/src/: debugger.c  debugger.h  executor.c  executor.h  text.h  unit_tests.c
c/test/: all-ops.ibcm  overflow.ibcm  system.sh  units.c
cpp/: .gitignore  Makefile  README.md  ibcmer.cpp  install.sh  program.cpp
cpp/src/: doubleByte.cpp  doubleByte.h  program.cpp  program.h
examples/: README.md  array-summation.ibcm  hello-world.ibcm  multiply.ibcm  summation.ibcm  turing.ibcm
fish/: ibcmer.fish
go/: .gitignore  executor.go  go.mod  main.go
javascript/: ibcm.js  ibcmer.js  package-lock.json  package.json
lua/: ibcmer.lua
perl/: ibcmer.pl
python/: ibcmer.py
ruby/: ibcmer.rb
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/tests/: empty-line.ibcm  nonhex-op.ibcm  nop.ibcm  short-op.ibcm
shell/: ibcmer.sh
src/: debugger.c  executor.c  executor.h  unit_tests.c
swift/: Package.swift
swift/Sources/: ibcm.swift  main.swift
tests/: all-ops.ibcm  codefile-invalid-hex.ibcm  codefile-overflow.ibcm  codefile-short-opcode.ibcm  halt-on-last.ibcm  invalid-subopcode.ibcm  overflow.ibcm  pc-overflow.ibcm  run.sh
zig/: build.zig  build.zig.zon
zig/src/: executor.zig  (+1 more)
(+12 files in other folders)
