# IBCMer - Rust
#   URL: https://github.com/pennbauman/ibcmer
#   License: Creative Commons Attribution Share Alike 4.0 International
#   Author: Penn Bauman <me@pennbauman.com>
[package]
name = "ibcmer"
version = "0.1.0"
authors = ["Penn Bauman <me@pennbauman.com>"]
edition = "2021"
repository = "https://github.com/pennbauman/ibcmer"
license = "CC-BY-4.0"

[dependencies]
thiserror = "1.0"
